# wasm-on-server-runtime-rust

./: Cargo.toml  README.md  devbox.json
src/: main.rs
src/server/: start.rs
src/server/run/: post.rs
src/wasm_runtime/: runtime.rs
wit/: world.wit
